syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/community";
package messages.community;

message GetUsersRequest {
	enum Order {
		Desc = 0;
		Asc = 1;
	}

	enum SortBy {
		Watched = 0;
		Messages = 1;
		Emotes = 2;
		UsedChannelPoints = 3;
	}

	uint32 limit = 1;
	uint32 page = 2;
 	Order order = 3;
	SortBy sort_by = 4;
	string channel_id = 5;
}

message GetUsersResponse {
	message User {
		string id = 1;
		string watched = 2;
		int32 messages = 3;
		string emotes = 4;
		string used_channel_points = 5;
	}

	repeated User users = 1;
	uint32 total_users = 2;
}

message ResetStatsRequest {
	enum Field {
		Messages = 0;
		Watched = 1;
		UsedChannelsPoints = 2;
		Emotes = 3;
	}

	Field field = 1;
}
